# interface

./: .gitignore  README.md  execution_times.txt  plotting.py  pyproject.toml
mfnet/: mfnet_classification.ipynb  mfnet_regression.ipynb  mfnet_train_test_classification.ipynb
mplstyles/: mylegend.mplstyle
pytorch/: helper_functions.py  torch_classification.ipynb  torch_regression.ipynb
