[project]
name = "mfnet-vs-pytorch"
version = "0.1.0"
description = "A project to compare MFNet and PyTorch"
readme = "README.md"
requires-python = ">=3.12.0, <3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "mfnet",
    "numpy<2",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch==2.2.2",
    "torchvision>=0.17.2",
]

[tool.uv.sources]
mfnet = { git = "ssh://git@github.com/marchfra/mfnet" }
# mfnet = { path = "../mfnet", editable = true }
